complete stub and logging.

--- a/app/views/amazon_pay/buy.html.slim
+++ b/app/views/amazon_pay/buy.html.slim
@@ -7,4 +7,5 @@ p 税　\800
 
 p 合計 \10,800
 
-input type="button" onclick="location.href='#{amazon_pay_confirm_path}'" value="Confirm"
+button onclick="location.href='#{amazon_pay_confirm_path}'"
+  | Confirm
