--- a/app/views/amazon_pay/confirm.html.slim
+++ b/app/views/amazon_pay/confirm.html.slim
@@ -9,4 +9,5 @@ p 合計 \10,800
 
 p thank you!!
 
-input type="button" onclick="location.href='#{index_path}'" value="my page"
+button onclick="location.href='#{index_path}'"
+  | my page
