--- a/app/views/amazon_pay/login.html.slim
+++ b/app/views/amazon_pay/login.html.slim
@@ -18,6 +18,7 @@ javascript:
         }
     });
 
-input type="button" onclick="location.href='#{index_path}'" value="dummy login"
+button onclick="location.href='#{index_path}'"
+  | dummy login
 
 p Log in with amazon button is not working. so please jump with dummy login button
