--- a/app/views/amazon_pay/index.html.slim
+++ b/app/views/amazon_pay/index.html.slim
@@ -9,5 +9,8 @@ br
 
 = image_tag asset_path('item.png')
 p 伝説の剣　\10,000
-input type="button" onclick="location.href='#{amazon_pay_buy_path}'" value="Buy"
+
+button onclick="location.href='#{amazon_pay_buy_path}'"
+  | Buy
+
 
