complete stub and logging.

--- a/app/views/amazon_pay/index.html.slim
+++ b/app/views/amazon_pay/index.html.slim
@@ -8,7 +8,7 @@ br
 br
 
 = image_tag asset_path('item.png')
-p 伝説の剣　\10,000
+p 伝説の剣　￥10,000
 
 button onclick="location.href='#{amazon_pay_buy_path}'"
   | Buy
