--- a/app/views/amazon_pay/buy.html.slim
+++ b/app/views/amazon_pay/buy.html.slim
@@ -1,11 +1,11 @@
 h1 Buying item
 
-p 伝説の剣　\10,000
+p 伝説の剣　￥10,000
 
-p 小計　\10,000
-p 税　\800
+p 小計　￥10,000
+p 税　￥800
 
-p 合計 \10,800
+p 合計 ￥10,800
 
 button onclick="location.href='#{amazon_pay_confirm_path}'"
   | Confirm
