--- a/app/views/amazon_pay/confirm.html.slim
+++ b/app/views/amazon_pay/confirm.html.slim
@@ -1,11 +1,11 @@
 h1 Order confirmation
 
-p 伝説の剣　\10,000
+p 伝説の剣　￥10,000
 
-p 小計　\10,000
-p 税　\800
+p 小計　￥10,000
+p 税　￥800
 
-p 合計 \10,800
+p 合計 ￥10,800
 
 p thank you!!
 
