--- a/app/views/amazon_pay/login.html.slim
+++ b/app/views/amazon_pay/login.html.slim
@@ -4,14 +4,14 @@ div id="AmazonLoginButton"
 
 javascript:
     var authRequest;
-    OffAmazonPayments.Button("AmazonLoginButton", "AQR8184NJXADU", {
+    OffAmazonPayments.Button("AmazonLoginButton", "#{ENV['SELLER_ID']}", {
         type: "LwA",
         color: "Gold",
         width: 100,
         height: 50,
         authorization: function () {
-            loginOptions = {scope: "profile postal_code payments:widget payments:shipping_address", popup: true};
-            authRequest = amazon.Login.authorize(loginOptions, "https://127.0.0.1:3000/index");
+            loginOptions = {scope: "profile postal_codye payments:widget payments:shipping_address", popup: true};
+            authRequest = amazon.Login.authorize(loginOptions, "#{ENV['CALLBACK_URL']}");
         },
         onError: function (error) {
             // something bad happened
