update the detail.

--- a/app/views/amazon_pay/index.html.slim
+++ b/app/views/amazon_pay/index.html.slim
@@ -1,7 +1,7 @@
 h1 My page
 p name: #{@profile[:name]}
 p email: #{@profile[:email]}
-p user id: #{@profile[:id]}
+p user id: #{@profile[:user_id]}
 
 br
 br
