--- a/app/views/amazon_pay/login.html.slim
+++ b/app/views/amazon_pay/login.html.slim
@@ -21,4 +21,4 @@ javascript:
 button onclick="location.href='#{index_path}'"
   | dummy login
 
-p Log in with amazon button is not working. so please jump with dummy login button
+p Log in with amazon button is not working because of stub. so please jump with dummy login button
