--- a/app/views/amazon_pay/buy.html.slim
+++ b/app/views/amazon_pay/buy.html.slim
@@ -7,5 +7,19 @@ p 税　￥800
 
 p 合計 ￥10,800
 
+div id="AmazonPayButton"
+javascript:
+  var authRequest;
+  OffAmazonPayments.Button("AmazonPayButton", "#{ENV['SELLER_ID']}", {
+    type: "PwA",
+    authorization: function () {
+      loginOptions = { scope: "profile postal_code payments:widget payments:shipping_address", popup: true };
+      authRequest = amazon.Login.authorize(loginOptions, 'https://try-amazon-pay-staging.herokuapp.com/amazon_pay/confirm');
+    },
+    onError: function (error) {
+      // something bad happened
+    }
+  });
+
 button onclick="location.href='#{amazon_pay_confirm_path}'"
   | Confirm
