--- a/app/views/amazon_pay/buy.html.slim
+++ b/app/views/amazon_pay/buy.html.slim
@@ -7,20 +7,37 @@ p 税　￥800
 
 p 合計 ￥10,800
 
-div id="AmazonPayButton"
+div id="addressBookWidgetDiv" style="width:400px; height:240px;"
+div id="walletWidgetDiv" style="width:400px; height:240px;"
 
 javascript:
-  var authRequest;
-  OffAmazonPayments.Button("AmazonPayButton", "#{ENV['SELLER_ID']}", {
-    type: "PwA",
-    authorization: function () {
-      loginOptions = { scope: "profile postal_code payments:widget payments:shipping_address", popup: true };
-      authRequest = amazon.Login.authorize(loginOptions, 'https://try-amazon-pay-staging.herokuapp.com/amazon_pay/confirm');
+  new OffAmazonPayments.Widgets.AddressBook({
+    sellerId: "#{ENV['SELLER_ID']}",
+    onOrderReferenceCreate: function (orderReference) {
+       orderReferenceId = orderReference.getAmazonOrderReferenceId();
+    },
+    onAddressSelect: function () {
+        // do stuff here like recalculate tax and/or shipping
+    },
+    design: {
+        designMode: 'responsive'
     },
     onError: function (error) {
-      // something bad happened
+        // your error handling code
     }
-  });
+  }).bind("addressBookWidgetDiv");
+
+  new OffAmazonPayments.Widgets.Wallet({
+    sellerId: "#{ENV['SELLER_ID']}",
+    onPaymentSelect: function (orderReference) {
+    },
+    design: {
+        designMode: 'responsive'
+    },
+    onError: function (error) {
+        // your error handling code
+    }
+  }).bind("walletWidgetDiv");
 
 button onclick="location.href='#{amazon_pay_confirm_path}'"
   | Confirm
