put access token into view as hidden.

--- a/app/views/amazon_pay/index.html.slim
+++ b/app/views/amazon_pay/index.html.slim
@@ -1,7 +1,7 @@
 h1 My page
-p name: #{@profile[:name]}
-p email: #{@profile[:email]}
-p user id: #{@profile[:user_id]}
+p name: #{user_profile[:name]}
+p email: #{user_profile[:email]}
+p user id: #{user_profile[:user_id]}
 
 br
 br
