correct path name.

--- a/app/views/amazon_pay/buy.html.slim
+++ b/app/views/amazon_pay/buy.html.slim
@@ -41,6 +41,6 @@ javascript:
     }
   }).bind("walletWidgetDiv");
 
-form action="#{amazon_pay_confirm_path}" method='post'
+form action="#{confirm_path}" method='post'
   input type='hidden' id='order_reference_id'
   input type='submit' name='commit' value='CONFIRM' class='button'
