--- a/app/views/amazon_pay/index.html.slim
+++ b/app/views/amazon_pay/index.html.slim
@@ -24,7 +24,7 @@ javascript:
     }
   });
 
-button onclick="location.href='#{amazon_pay_buy_path}'"
+button onclick="location.href='#{buy_path}'"
   | Buy
 
 
